--- a/css/style.css
+++ b/css/style.css
@@ -11,9 +11,14 @@ body {
     height: 100%;
     margin: 0;
 }
+main {
+    display: flex;
+    align-items: center;
+}
 #renderer {
     border: 1px solid blue;
     margin-right: 5%;
+    margin-left: 15%;
     height: 70vh;
     width: 80%;
 
@@ -33,6 +38,25 @@ body {
     background-color: rgba(191, 191, 191, 0.5);
     border-radius: 20%;
     /*border: 4px solid white;*/
+}
+.tooltip-div {
+    display: none;
+    position: relative;
+}
+.tooltip {
+    position: absolute;
+
+    left: 10vw;
+    bottom: 4vh;
+
+    padding: 5px 5px;
+
+    color: var(--main_color);
+    background-color: #2323238c;
+    border-radius: 10%;
+}
+li a:hover + .tooltip-div {
+    display: inline;
 }
 nav {
     display: flex;
